// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Landing should match the snapshot 1`] = `
<div
  className="landing"
>
  <h2
    className="landing__h2"
  >
    Welcome to Robo Report!
  </h2>
  <div
    className="landing__text-block"
  >
    <p
      className="landing__p"
    >
      Robo calls have become the primary incoming phone calls to our mobile devices. It's incredibly frustrating. However, the annoyance of fielding and blocking those calls has not superseded the annoyance of finding and filling out the FCC complaint form.
    </p>
    <p
      className="landing__p"
    >
      RoboReport is here to help. Create an account with our app, and it will auto-populate the FCC complaint form, greatly reducing the primary barrier to getting this complaint data to the FCC, and hopefully, spurring the FCC to take action to stop these incessant, unwanted calls.
    </p>
  </div>
  <div
    className="landing__stats-group"
  >
    <div
      className="stats-group"
    >
      <p>
        Prior Day Reports
        <br />
        (nationwide)
      </p>
      <span
        className="stats-group__total"
      >
        0
      </span>
    </div>
    <PieChart
      fccData={Array []}
    />
  </div>
  <BarChart
    fccData={Array []}
  />
</div>
`;

exports[`Landing should match the snapshot 2`] = `
<div
  className="landing"
>
  <h2
    className="landing__h2"
  >
    Welcome Back Walter!
  </h2>
  <Instructions />
  <div
    className="landing__stats-group"
  >
    <div
      className="stats-group"
    >
      <p>
        Prior Day Reports
        <br />
        (nationwide)
      </p>
      <span
        className="stats-group__total"
      >
        0
      </span>
    </div>
    <PieChart
      fccData={Array []}
    />
  </div>
  <BarChart
    fccData={Array []}
  />
</div>
`;
